2019-01-13  Simon Fraser  <simon.fraser@apple.com>

        Minor optimization to RenderText::setRenderedText()
        https://bugs.webkit.org/show_bug.cgi?id=193388

        Reviewed by Ryosuke Niwa.

        Avoid the call to applyTextTransform() if TextTransform is None, so that we don't
        have to call previousCharacter() and reassign m_text.
        
        Similar optimization in RenderText::textWithoutConvertingBackslashToYenSymbol().

        Speedometer profiles show a few samples here, but this isn't going to win any prizes.

        * rendering/RenderText.cpp:
        (WebCore::RenderText::setRenderedText):
        (WebCore::RenderText::textWithoutConvertingBackslashToYenSymbol const):

2019-01-13  Dan Bernstein  <mitz@apple.com>

        Tried to fix the build.

        * editing/cocoa/DictionaryLookup.mm:

2019-01-13  Dan Bernstein  <mitz@apple.com>

        Tried to fix USE(APPLE_INTERNAL_SDK) builds after r239901.

        Patch by Keith Rollin.

        * accessibility/mac/AXObjectCacheMac.mm:

2019-01-13  Zalan Bujtas  <zalan@apple.com>

        [LFC] Adjust assert for statically positioned fixed elements
        https://bugs.webkit.org/show_bug.cgi?id=193385

        Reviewed by Antti Koivisto.

        While computing the static position and traversing the ancestor chain, we can surely hit a positioned container
        (since we need to go all the way up to the initial containing block).

        * layout/FormattingContextGeometry.cpp:
        (WebCore::Layout::staticVerticalPositionForOutOfFlowPositioned):
        (WebCore::Layout::staticHorizontalPositionForOutOfFlowPositioned):

2019-01-13  Antti Koivisto  <antti@apple.com>

        Release assert with <img usemap> in shadow tree
        https://bugs.webkit.org/show_bug.cgi?id=193378

        Reviewed by Ryosuke Niwa.

        When a shadow host that has <img usemap> in the shadow tree is removed from the document, we try
        to remove the map from the scope of the host.
